# Anabasis

./: .gitignore  CMakeLists.txt  INTEGRATE_IN_EXISTING_TREE.md  README.md  hypre_ij_migrate_ptr_probe.cu  hypre_linkage_report_jd-MS-7E51.txt  inspect_hypre_linkage.sh
apps/generic_simple_v1/: CMakeLists.txt
apps/generic_simple_v1/src/: bc_runtime_config.cu  bc_specs.cu  bc_specs.h  main.cu  main.cu.broken_before_clean_repatch  pressure_lib_adapter.cu  velocity_bc_eval.cu  velocity_lib_adapter.cu  velocity_lib_adapter.h
apps/poisson_mms_lib/: CMakeLists.txt  main.cu
apps/poisson_mms_mixed_lib/: CMakeLists.txt  main.cu
apps/poisson_mms_neumann_lib/: CMakeLists.txt  main.cu
apps/scalar_mms_lib/: CMakeLists.txt  main.cu
apps/simple/: CMakeLists.txt
apps/simple/src/: bc_runtime_config.cu  bc_runtime_config.h  bc_specs.cu  bc_specs.h  main.cu  patch_geometry.cu  patch_geometry.h  pressure_lib_adapter.h  velocity_bc_eval.cu  velocity_bc_eval.h
bc_configs/: industrial_uniform_normal.bc  pipe_fixed_vector.bc  pipe_normal_inlet_speed1.bc  pipe_uniform_flowrate.bc  pipe_uniform_normal.bc  viscous_case_A.bc
cases/: cylinder.case  pipe_normal_inlet_mu.case  pipe_reverse_normal_inlet_mu.case
cases/ramp/: cylinder3d_ramp_Re20_runtimeBC.case
examples/cylinder/constant/polyMesh/: boundary  neighbour  owner
libpoisson/: CMakeLists.txt
libpoisson/include/: bc.h  common.h  field.h  gradient.h  hypre_backend.h  mesh.h  mms.h  poisson_library.h  scalar_elliptic.h
libpoisson/src/: bc.cu  gradient.cu  hypre_backend.cu  poisson_library.cu  scalar_elliptic.cu
libscalar/: CMakeLists.txt
libscalar/include/: scalar_transport_library.h
libscalar/src/: scalar_transport_library.cu
poisson/tet_dirichlet_mms/: CMakeLists.txt
poisson/tet_dirichlet_mms/include/: common.h  gradient.h  hypre_backend.h  laplacian.h  mms.h
poisson/tet_dirichlet_mms/scripts/: run_convergence.sh
poisson/tet_dirichlet_mms/src/: gradient.cu  hypre_backend.cu  laplacian.cu  main.cu  mesh.cu
scripts/: run_case.sh
